--- a/Login.html
+++ b/Login.html
@@ -6,33 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="login.css">
-    <title>Login</title>
+    <title>Login Page</title>
 </head>
 <body class="container">
     <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-        <label class="form-check-label" for="flexRadioDefault1">
+        <input class="form-check-input" type="radio" name="userTypeButton" id="studentButton">
+        <label class="form-check-label" for="studentButton">
           Student
         </label>
       </div>
       <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-        <label class="form-check-label" for="flexRadioDefault2">
+        <input class="form-check-input" type="radio" name="userTypeButton" id="teacherButton">
+        <label class="form-check-label" for="teacherButton">
           Teacher
         </label>
       </div>
      
     <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-        <label for="floatingInput">Name</label>
+        <input type="text" class="form-control" id="floatingName" placeholder="John Doe">
+        <label for="floatingName">Name</label>
       </div>
       <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="floatingPassword" placeholder="Password">
-        <label for="floatingPassword">College Email</label>
+        <input type="email" class="form-control" id="floatingEmail" placeholder="name_surnamexx@vnrvjiet.in">
+        <label for="floatingEmail">College Email</label>
       </div>
       <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-        <label for="floatingInput">Roll no.</label>
+        <input type="text" class="form-control" id="floatingID" placeholder="xxxxxxxxxx">
+        <label for="floatingID" class="id-or-rollnumber">Roll Number</label>
       </div>
       <div class="form-floating mb-3">
         <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
@@ -42,6 +42,8 @@
 
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="login.js"></script>
 </body>
 </html>
